@@ -208,6 +208,8 @@ Unreleased changes (1.0-dev)
 
 74. NUTCH-605 - Change deprecated configuration methods for Hadoop (kubes)
 
+75. NUTCH-603 - Add more default url normalizations (kubes)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
